fix: overflowing and size issues in mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -13,7 +13,7 @@
 	/* height: 15vh; */
 	background-image: linear-gradient(45deg, var(--light-blue), var(--text-color));
 
-	padding: 10px 0px;
+	padding: 10px;
 
 	display: flex;
 	align-items: center;
@@ -25,7 +25,7 @@
 }
 
 .home-page-buttons {
-	margin: 5px;
+	margin: 0px;
 }
 
 .home-page-button {
@@ -59,10 +59,6 @@
 }
 
 .projects-video {
-	/* width: 640px;
-	min-width: 640px;
-	height: 100%;
-	min-height: auto; */
 	width: 100%;
 	height: 100%;
 	border: 0;
@@ -73,6 +69,7 @@
 	min-width: 640px;
 	min-height: auto;
 	border: 0;
+	/* padding-top: 56.25%; */
 }
 
 .divider {
@@ -183,14 +180,88 @@ h1 {
   }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 500px) {
+	.home-page-buttons-row {
+		flex-direction: column;
+		gap: 10px;
+		width: 100%;
+	}
+	
+	.home-page-buttons {
+		width: 100%;
+	}
+
+	.home-page-button {
+		margin: 0px;
+		text-align: center;
+	}
+
+	.language-selector-container {
+		width: 100%;
+		text-align: center;
+	}
+
+	html {
+		font-size: 10px;
+	}
+
+	h1 {
+		font-size: 2.5rem;
+	}
+	
 	.projects-item {
 		flex-direction: column;
-		width: 100vw;
+		width: 100%;
 		min-height: 270px;
 		height: auto;
 		border-radius: 0px;
 		align-items: center;
+		box-sizing: border-box;
+		padding: 5px;
+	}
+
+	.projects-video {
+		position: absolute;
+		top:0;
+		left:0;
+		width: 100%;
+		height: 100%;
+	}
+
+	.projects-video-container {
+		width: 100%;
+		height: 100%;
+		min-width: auto;
+		min-height: auto;
+		padding-top: 56.25%;
+		position: relative;
+	}
+
+	.divider {
+		width: 90%;
+	}
+
+	.projects-info {
+		width: 90%;
+		text-align: center;
+	}
+
+	#projects-move-to-top-button {
+		transform: scale(0.5);
+		bottom: 5px;
+		right: 5px;
+	}
+}
+
+@media only screen and (min-width: 500px) {
+	.projects-item {
+		flex-direction: column;
+		width: 100%;
+		min-height: 270px;
+		height: auto;
+		border-radius: 0px;
+		align-items: center;
+		box-sizing: border-box;
 	}
 
 	/* .projects-video {
@@ -224,10 +295,12 @@ h1 {
 @media only screen and (min-width: 900px) {
 	.projects-item {
 		flex-direction: row;
-		width: 100vw;
-		min-height: 270px;
+		width: 100%;
+		/* 60px is from padding */
+		min-height: calc(270px + 60px);
 		border-radius: 0px;
 		align-items: normal;
+		box-sizing: border-box;
 	}
 
 	/* .projects-video {
@@ -265,6 +338,7 @@ h1 {
 		min-height: 360px;
 		border-radius: 20px;
 		align-items: normal;
+		box-sizing: content-box;
 	}
 
 	/* .projects-video {
